# FactoryWithParametersBoostDIExample

./: CMakeLists.txt
src/: CustomWidget.cpp  CustomWidget.h  MainWindow.cpp  MainWindow.h  Widget.cpp  Widget.h  main.cpp
